# gitlab-search

./: .gitignore  README.md  pyproject.toml
src/gitlab_search/: __init__.py  __main__.py  cli.py  config.py  executor.py  expression.py  gitlab.py  output.py  parser.py
tests/: __init__.py  test_executor.py  test_expression.py  test_parser.py
